syntax = "proto3";
import "database.proto";
package proto;

service MovieService {
    rpc Create(Movie) returns (DatabaseResponse) {}
    rpc Update(Movie) returns (DatabaseResponse) {}
    rpc SoftDelete(Movie) returns (DatabaseResponse) {}
    rpc ForceDelete(Movie) returns (DatabaseResponse) {}

    rpc FindAll(DatabaseEmpty) returns (DatabaseResponse) {}
    rpc FindDownloaded(DatabaseEmpty) returns (DatabaseResponse) {}
    rpc FindOneByID(DatabaseID) returns (DatabaseResponse) {}
    rpc FindManyByID(DatabaseIDs) returns (DatabaseResponse) {}
    rpc FindOneByTitle(DatabaseString) returns (DatabaseResponse) {}
    rpc FindManyByTitle(DatabaseStrings) returns (DatabaseResponse) {}
    rpc FindOneByOriginalTitle(DatabaseString) returns (DatabaseResponse) {}
    rpc FindManyByOriginalTitle(DatabaseStrings) returns (DatabaseResponse) {}
    rpc FindOneByLocalTitle(DatabaseString) returns (DatabaseResponse) {}
    rpc FindManyByLocalTitle(DatabaseStrings) returns (DatabaseResponse) {}
}

message Movie {
    uint64                  id                          =   1;
    string                  title                       =   2;
    string                  original_title              =   3;
    string                  local_title                 =   4;
    string                  original_language           =   5;
    bytes                   languages                   =   6;
    string                  overview                    =   7;
    string                  tagline                     =   8;
    bytes                   genres                      =   9;
    string                  homepage                    =   10;
    uint64                  runtime                     =   11;
    uint64                  status                      =   12;
    bool                    adult                       =   13;
    string                  imdb_id                     =   14;
    string                  release_date                =   15;
    bytes                   production_companies        =   16;
    bytes                   production_countries        =   17;
    double                  vote_average                =   18;
    uint64                  vote_count                  =   19;
    double                  popularity                  =   20;
    uint64                  budget                      =   21;
    uint64                  revenue                     =   22;
    string                  backdrop                    =   23;
    string                  poster                      =   24;
    int64                   created_at                  =   25;
    int64                   updated_at                  =   26;
    repeated string         updated_fields              =   27;
}